initial binary editor commit